k3s/apps/code-server/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-deployment
  namespace: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: mrakaki/code-server:main
        volumeMounts:
        - name: cs-storage-point
          mountPath: "/config"
        ports:
        - containerPort: 8443
          protocol: TCP
          name: cs-deploy-port
        resources:
          limits:
            cpu: 4000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 512Mi
        livenessProbe:
          exec:
            command:
              - curl
              - --fail
              - 'http://localhost:8443'

        readinessProbe:
          exec:
            command:
              - curl
              - --fail
              - 'http://localhost:8443'
        
      volumes:
      - name: cs-storage-point
        persistentVolumeClaim:
          claimName: cs-storage
