k3s/apps/code-server/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-service
  namespace: code-server
  labels:
    app: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8443
      targetPort: cs-deploy-port
      name: cs-service-port
