k3s/apps/code-server/04.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ingress
  namespace: code-server
  labels:
    app: code-server
spec:
  ingressClassName: nginx
  rules:
  - host: your.domain.example
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cs-service
            port: 
              name: cs-service-port
